# projeto_chatbot

./: .gitignore  README.MD  main.py  pyproject.toml
prompts/: py_instructor.py
