[tool.poetry]
name = "projeto-chatbot"
version = "0.1.0"
description = ""
authors = ["davidade300 <iaderinho@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
openai = "^1.53.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
